--- a/serverless.yml
+++ b/serverless.yml
@@ -150,6 +150,27 @@ functions:
               - X-Amz-User-Agent
               - X-Amz-Security-Token
             allowCredentials: true
+  getUserProfile:
+    handler: handler.getUserProfile
+    events:
+      - http:
+          path: auth/profile
+          method: ANY
+          cors:
+            origin: ${self:custom.cors.origin.${opt:stage, 'local'}}
+            headers:
+              - Content-Type
+              - Token
+              - token
+              - Authorization
+              - X-Amz-Date
+              - Access-Control-Allow-Origin
+              - Access-Control-Allow-Headers
+              - Access-Control-Allow-Methods
+              - X-Api-Key
+              - X-Amz-User-Agent
+              - X-Amz-Security-Token
+            allowCredentials: true
 
   # Places Functions
   uploadPlaceImage:
