add function to change status

--- a/serverless.yml
+++ b/serverless.yml
@@ -168,6 +168,27 @@ functions:
               - X-Amz-User-Agent
               - X-Amz-Security-Token
             allowCredentials: true
+  toggleUserAdmin:
+    handler: handler.toggleUserAdmin
+    events:
+      - http:
+          path: auth/users/{id}/toggle-admin
+          method: PATCH
+          cors:
+            origin: ${self:custom.cors.origin.${opt:stage, 'local'}}
+            headers:
+              - Content-Type
+              - Token
+              - token
+              - Authorization
+              - X-Amz-Date
+              - Access-Control-Allow-Origin
+              - Access-Control-Allow-Headers
+              - Access-Control-Allow-Methods
+              - X-Api-Key
+              - X-Amz-User-Agent
+              - X-Amz-Security-Token
+            allowCredentials: true
 
   # Places Functions
   uploadPlaceImage:
