add function to checkavaliability

--- a/serverless.yml
+++ b/serverless.yml
@@ -508,6 +508,27 @@ functions:
               - X-Amz-User-Agent
               - X-Amz-Security-Token
             allowCredentials: true
+  checkPlaceAvailability:
+    handler: handler.checkPlaceAvailability
+    events:
+      - http:
+          path: books/availability
+          method: GET
+          cors:
+            origin: ${self:custom.cors.origin.${opt:stage, 'local'}}
+            headers:
+              - Content-Type
+              - Token
+              - token
+              - Authorization
+              - X-Amz-Date
+              - Access-Control-Allow-Origin
+              - Access-Control-Allow-Headers
+              - Access-Control-Allow-Methods
+              - X-Api-Key
+              - X-Amz-User-Agent
+              - X-Amz-Security-Token
+            allowCredentials: true
 
   # Posts Functions
   uploadPostImage:
